# KevBot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_OLD.md  DECISIONS.md  PRD.md  Procfile  README.md  RELEASE_NOTES.md  TODOS.md  VERSION.txt  categories.csv  categories.txt  commitlint.config.js  config.json  docker-compose.dev.yml  docker-compose.new-dev.yml  docker_cmds.txt  dockerfile  eventhandlers.js  globaldata.js  helperfcns.js  index.js  init.js  kev-bot.js  logs.txt  package-lock.json  package.json
.devcontainer/: devcontainer.json  docker-compose.dev.yml
.github/: .release-please-manifest.json  RELEASE_PROCESS_IMPLEMENTATION.md  REPOSITORY_SETTINGS.md  provision-digital-ocean-droplet.yml  release-please-config.json
SQL/: kevbot_sql_script.sql  kevbot_sql_test_script.sql
api/: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  app.js  docker-compose.dev.yml  jest.config.js  package-lock.json  package.json  server.js  tsconfig.base.json  tsconfig.json  tsconfig.test.json
commands/: addcatsto.js  addtocat.js  del_category.js  del_greeting.js  delcategory.js  delcatsfrom.js  delfromcat.js  get_greeting.js  help.js  list.js  new_category.js  newcategory.js  p.js  play.js  play_attach.js  play_random.js  pr.js  raid.js  set_greeting.js  setfarewell.js  setgreeting.js  upload.js
data/: audio.csv  categories.csv  category_list.csv
db/: .gitignore  CHANGELOG.md  README.md  docker-compose.yml
deploy/: Dockerfile  Dockerfile.dev
docs/: testing.txt
tools/db/migration_manager/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
tools/db/migration_manager/migration_manager/: __main__.py
tools/db/rename_to_id/: Pipfile  README.md  __main__.py  pyproject.toml  requirements.txt
tools/db/rename_to_id/rename_to_id/: __main__.py
(+435 files in other folders)
