[tool.poetry]
name = "migration-manager"
version = "0.1.0"
description = ""
authors = ["Kunedawg <Kevin.Kuney@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
packaging = "^24.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
