[tool.poetry]
name = "rename-to-id"
version = "0.1.0"
description = ""
authors = ["Kunedawg <Kevin.Kuney@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-cloud-storage = "^2.17.0"
mysql-connector-python = "^9.0.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
